[package]
authors = ["Lyssieth <raxixor@rax.ee>"]
edition = "2021"
name = "sauce_bot"
version = "0.1.0"
publish = false

[profile.dev]
lto = false

[profile.release]
lto = true

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sauce-api = { git = "https://github.com/lyssieth/sauce-api", default-features = false, features = [
    "iqdb",
    "saucenao",
    "fuzzysearch",
    "rustls",
] }
serde = { version = "1.0.171", features = ["derive"] }
# serenity = "0.10.10"
smart-default = "0.7.1"
tokio = { version = "1.29.1", features = ["full"] }
toml = "0.7.6"
url = "2.4.0"
twilight-gateway = "0.15.2"
twilight-http = "0.15.2"
twilight-model = "0.15.2"
futures = "0.3.28"
twilight-interactions = "0.15.2"
twilight-util = { version = "0.15.2", features = ["full"] }
async-trait = "0.1.71"
num-traits = "0.2.15"
sparkle-convenience = "0.15.8"
