[package]
authors = ["Lyssieth <raxixor@rax.ee>"]
edition = "2021"
name = "sauce_bot"
version = "0.1.0"
publish = false

[profile.dev]
lto = false

[profile.release]
lto = true

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sauce-api = { git = "https://github.com/lyssieth/sauce-api", default-features = false, features = [
    "iqdb",
    "saucenao",
    "fuzzysearch",
    "rustls",
] }
serde = { version = "1.0.188", features = ["derive"] }
smart-default = "0.7.1"
tokio = { version = "1.32.0", features = ["full"] }
toml = "0.8.0"
url = "2.4.1"
twilight-gateway = "0.15.4"
twilight-http = "0.15.4"
twilight-model = "0.15.4"
futures = "0.3.28"
twilight-interactions = "0.15.2"
twilight-util = { version = "0.15.4", features = ["full"] }
async-trait = "0.1.73"
num-traits = "0.2.16"
sparkle-convenience = "0.16.0-rc.3"
openssl = {optional=true,version="*"}

[features]
default = ["static_ssl"]
static_ssl = ["openssl/vendored"]
