[package]
authors = ["Lyssieth <raxixor@rax.ee>"]
edition = "2024"
name = "sauce_bot"
version = "0.1.0"
publish = false

[profile.dev]
lto = false

[profile.release]
lto = true

[dependencies]
color-eyre = "0.6.2"
tracing = "0.1.37"
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
sauce-api = { git = "https://github.com/lyssieth/sauce-api", default-features = false, features = [
    "iqdb",
    "saucenao",
    "fuzzysearch",
    "rustls",
] }
serde = { version = "1.0", features = ["derive"] }
smart-default = "0.7"
tokio = { version = "1", features = ["full"] }
toml = "0.9"
url = "2.4"
twilight-gateway = "0.16"
twilight-http = "0.16"
twilight-model = "0.16"
futures = "0.3"
twilight-interactions = "0.16"
twilight-util = { version = "0.16", features = ["full"] }
async-trait = "0.1"
num-traits = "0.2"
sparkle-convenience = { git = "https://github.com/lyssieth/sparkle_convenience" }
openssl = {optional=true,version="*"}

[features]
default = ["static_ssl"]
static_ssl = ["openssl/vendored"]
